# wasm_rules

./: README.md  WORKSPACE.bazel  license  wasm_binary.bzl
examples/: BUILD.bazel  hello.c  statement.c  statement_i.c  statement_i.h
examples/Simple/: BUILD.bazel  hello.c  statement_i.c
examples/ffmpeg/: BUILD.bazel  api.h  app.c  hello.c
wasm/: make_script.bzl  wasm_binary.bzl  wasm_defs.bzl  wasm_library.bzl
wasm_toolchain/: BUILD.bazel  emcc.bzl
wasm_utils/: BUILD.bazel  deploy.bzl  make_ffmpeg_wasm.bzl  utils.bzl
