workspace(name = "wasm_rules")

register_toolchains("//wasm_toolchain:emcc_linux_toolchain")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")

new_git_repository(
    name = "ffmpeg.wasm-core",
    remote = "git@gitlab.laihua.com:laihua-cpp/ffmpeg-core.git",
	commit = "ef3f1c43bcc8b8c61d99862adf1f119ca3739976",
	shallow_since = "1661250785 +0800",
    build_file = "ffmpeg.wasm-core/BUILD.ffmpeg.wasm-core",
    recursive_init_submodules = True
)
