workspace(name = "wasm_rules")

register_toolchains("//wasm_toolchain:emcc_linux_toolchain")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")

new_git_repository(
    name = "ffmpeg.wasm-core",
    remote = "git@gitlab.laihua.com:laihua-cpp/ffmpeg-core.git",
	commit = "c1958fb1ac78272fd82d7791322b54c97e31ba18",
	shallow_since = "1661250785 +0800",
    build_file = "ffmpeg.wasm-core/BUILD.ffmpeg.wasm-core",
    recursive_init_submodules = True
)
