load("//wasm:wasm_binary.bzl", "wasm_binary")
load("//wasm:wasm_library.bzl", "wasm_library")

wasm_binary(
    name = "hello",
    srcs = ["hello.c"],
    deps = [":statement" ],
    target_compatible_with = [
        "@platforms//os:wasi",
        "@platforms//cpu:wasm64"
    ]
)

wasm_library(
    name = "statement",
    srcs = ["statement.c"],
	deps = [":statement-i"],
    target_compatible_with = [
        "@platforms//os:wasi",
        "@platforms//cpu:wasm64"
    ]
)

wasm_library(
	name = "statement-i",
	srcs = ["statement_i.c"],
    hdrs = ["statement_i.h"],
    target_compatible_with = [
        "@platforms//os:wasi",
        "@platforms//cpu:wasm64"
    ]
)

