
def _make_ffmpeg_wasm_impl(ctx):
    libs = [
         "libavformat", "libavcodec", "libavdevice", "libavfilter",
         "libavutil", "libpostproc", "libswresample", "libswscale",
    ]
    out_files = []
    include_dirs = []

    for lib in libs:
        out_files.append(ctx.actions.declare_file(lib+".a"))
        include_dirs.append(ctx.actions.declare_directory("include/"+lib))

    third_party = ctx.actions.declare_directory("third_party")

    # Build Script
    build_file = ctx.expand_location("$(locations build.sh)")
    script = ["(cd $(dirname \"$1\"); ./build.sh)"]
    for file in out_files:
        script.append(
            "cp $(dirname \"$1\")/" + \
                file.basename.split(".")[0] + "/" + \
                file.basename + " " + \
                file.path
        )
    script.append("cp $(dirname \"$1\")/build/lib/* " + third_party.path)

    for include in include_dirs:
        script.append("cp $(dirname \"$1\")/" + include.basename + "/*.h " + include.path)

    script_text = "\n".join(script)

    ctx.actions.run_shell(
        inputs = ctx.files.srcs,
        outputs = out_files + include_dirs + [third_party],
        command = script_text,
        arguments = [build_file],
        use_default_shell_env = True,
        execution_requirements = {
            "local": "1",
        },
        progress_message = "Build ffmpeg.wasm-core",
    )

    return [DefaultInfo(files = depset(out_files + [third_party])),
            OutputGroupInfo(include = depset(include_dirs))]


make_ffmpeg_wasm = rule(
    implementation = _make_ffmpeg_wasm_impl,
    attrs = {
        "srcs": attr.label_list(allow_files = True),
    }
)
