load("//wasm:wasm_binary.bzl", "wasm_binary")
load("//wasm:wasm_library.bzl", "wasm_library")
load("//wasm_utils:deploy.bzl", "wasm_deploy")

wasm_binary(
    name = "app",
    srcs = ["app.c"],
    hdrs = ["api.h"],
    deps = [":encode"],
    copts = [
          # linkopts
          "-lavformat",
          "-lavcodec",
          "-lavutil",
          "-lx264",
          "-lmp3lame",
          "-lz",
          "-lswresample",

          # WASM flags
          "-s WASM=1",
          "-s MODULARIZE=1",
          "-s FORCE_FILESYSTEM=1",
          "-s FETCH=1",
          "-s EXIT_RUNTIME=0",
          "-s EXPORT_NAME=\"createApp\"",
          "-s ASSERTIONS=1",
          "-s INVOKE_RUN=1",
          "-s EXPORTED_FUNCTIONS=\"[_main, _malloc, _free]\"",
          "-s EXPORTED_RUNTIME_METHODS=\"[FS, cwrap, ccall, setValue, writeAsciiToMemory,addFunction,removeFunction]\"",
          "-s ALLOW_MEMORY_GROWTH=1",
          "-s ALLOW_TABLE_GROWTH=1",
    ],
    target_compatible_with = [
        "@platforms//os:wasi",
        "@platforms//cpu:wasm64"
    ]
)

wasm_library(
    name = "encode",
    srcs = ["hello.c"],
    deps = ["@ffmpeg.wasm-core//:core-mp3mp4"],
    target_compatible_with = [
        "@platforms//os:wasi",
        "@platforms//cpu:wasm64"
    ]
)

wasm_deploy(
    name = "install",
    srcs = [":app"],
    target = "/tmp",
)
